crates/math-core/tests/snapshots/error_test__tag_with_empty.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\begin{align} x \\tag{} \\\\ y \\end{align}"
---
Error: Expected a number, got "".
   ╭─[ <input>:1:21 ]
   │
 1 │ \begin{align} x \tag{} \\ y \end{align}
   │                     ─┬  
   │                      ╰── expected a number here
───╯
